--- a/main.tex
+++ b/main.tex
@@ -64,7 +64,7 @@ Talking about location on the earth, a \textbf{single space cannot cover the ent
 
 
 \begin{defn}
-	A \textbf{coordinate line} is the set of points in U obtained by allowing one quantity to vary and holding the others fixed. 
+	A \textbf{coordinate line} is the set of points in $\mathbb{R}^n$ obtained by allowing one quantity to vary and holding the others fixed. 
 \end{defn}
 
 \begin{defn}
@@ -163,7 +163,7 @@ The boundary of a weather report would be readings restricted to a specific clim
 
 
 \begin{defn}
-	For k-surface $\sigma^k \in S^k$, the \textbf{boundary map} $\partial : S^k \to S^{k-1}$ gives the set of boundary points of $\sigma^k$. 
+	For k-surface $\sigma^k \in S^k$, the \textbf{boundary operator} $\partial : S^k \to S^{k-1}$ gives the set of boundary points of $\sigma^k$. 
 \end{defn}
 
 
@@ -177,7 +177,7 @@ $\partial\partial \sigma^k$ is empty since all points on the boundary are interi
 \end{coro}
 
 
-The boundary appears to be very similar to a line, in that all points on the boundary are interior with respect to the boundary. 
+NOTE: The boundary appears to be very similar to a line, in that all points on the boundary are interior with respect to the boundary. 
 
 For a cube, the boundary will suffer discontinuities due to the corners. This is ok, since there are a countable number of discontinuities. 
 
@@ -203,6 +203,7 @@ We have the tools now to begin talking about functions along our k-surfaces.
 	A k-functional applied to the empty set gives zero. 
 \end{prop}
 \begin{proof}
+	
 	Let $f_k : S^k \to \mathbb{R}$ be a linear function. Consider the empty set $\emptyset$. 
 We have $\emptyset \cap \emptyset \subseteq \partial\emptyset \cup \partial\emptyset$, and $\emptyset = \emptyset\cup\emptyset$. 
 So, $f_k(\emptyset) = f_k(\emptyset\cup\emptyset) = f_k(\emptyset) + f_k(\emptyset) \implies f_k(\emptyset) = 2f_k(\emptyset) \implies f_k(\emptyset) = 0$
@@ -271,9 +272,6 @@ $dP = w^ue_u + w^ve_v$
 This gives us vectors and covectors: the former being infinitesimal segments, and the latter being functions from vectors to real numbers
 
 
-REMINDER: Covectors take an infinitesimal segment and give a scalar value. Then, say that a linear functional on a line is the same as an integral of a covector over the infinitesimal segments 
-
-NOTE: Try to talk about orientation in terms of coordinates (flipping orientation flips a coordinate)
 
 \begin{defn}
 	A \textbf{vector} is an infinitesimal segment along a line, plane, etc. A \textbf{tangent plane}, then, is a collection of vectors that share a fixed point. 
@@ -291,7 +289,7 @@ For some line P, $\int df(P)$ = $\int \frac{\partial f(P)}{{\partial x^i}} dx^i$
 
 
 \begin{prop}
-	Every linear functional has a corresponding covector, such that for $f : S \to \mathbb{R}$, $f = \int_{\sigma} f(d\sigma)$. Further, for $g : S^{2} \to \mathbb{R}$, $g(\sigma) = \int_{\sigma} g(d\sigma) = f(\partial\sigma) = \int_{\partial\sigma}f(d\partial\sigma)$. 
+	Every linear functional has a corresponding covector, such that for $f : S \to \mathbb{R}$, $f = \int_{\sigma} f(d\sigma)$. In words, a linear functional applied over a line is the same as an integral of a covector over the infinitesimal segments of that line. Further, for $g : S^{2} \to \mathbb{R}$, $g(\sigma) = \int_{\sigma} g(d\sigma) = f(\partial\sigma) = \int_{\partial\sigma}f(d\partial\sigma)$. 
 \end{prop}
 
 
@@ -319,13 +317,12 @@ For some line P, $\int df(P)$ = $\int \frac{\partial f(P)}{{\partial x^i}} dx^i$
 	A \textbf{k-vector} is a geometrical object with a dimensionally appropriate magnitude and a direction. A vector as discussed previously is a 1-vector. 
 \end{defn}
 
-\begin{defn}
-	$\Sigma^k$ is the set of all vectors of dimension k. 
-	\end{defn}
+- \emph{Talking about orientation in terms of quantities: if we flip a quantity, we flip the orientation. Also, it should follow naturally that adding k-vectors of equal magnitude and opposite orientation will give zero.}
 
 \begin{defn}
-	$\Sigma = \cup_{k=0}^n \Sigma^k$ is the set of all k-vectors. 
-\end{defn}
+	$\Sigma^k$ is the set of all vectors of dimension k and $\Sigma = \cup_{k=0}^n \Sigma^k$ is the set of all k-vectors. 
+	\end{defn}
+
 
 \begin{defn}
 	
@@ -337,12 +334,9 @@ For some line P, $\int df(P)$ = $\int \frac{\partial f(P)}{{\partial x^i}} dx^i$
 \end{defn}
 
 \begin{defn}
-	$\Omega_k$ is the set of all forms of dimension k. 
+	$\Omega_k$ is the set of all forms of dimension k and $\Omega = \cup_{k=0}^n\Omega_k$ is the set of all forms. 
 \end{defn}
 
-\begin{defn}
-	$\Omega = \cup_{k=0}^n\Omega_k$ is the set of all forms. 
-\end{defn}
 
 
 
