--- a/main.tex
+++ b/main.tex
@@ -341,8 +341,12 @@ TODO: In wedge, talk about how switching sides we switch the orientation
 NOTE: wedge can be discussed as constructing parallelepiped 
 \begin{defn}
 	
-	The \textbf{wedge product} $\wedge : \Sigma^k\times \Sigma^j \to \Sigma^{k+j}$ combines k-vectors antisymmetrically to generate k-vectors of a higher rank. 
+	The \textbf{wedge product} $\wedge : \Sigma^k\times \Sigma^j \to \Sigma^{k+j}$ combines k-vectors antisymmetrically to generate parallelepipeds. 
 \end{defn}
+
+\begin{coro}
+	The orientation of each side of the parallelepiped is different, as determined by the factors in the wedge product. 
+\end{coro}
 
 \begin{defn}
 	A \textbf{k-form} $\omega_k : V^k \to \mathbb{R}$ is a skew-symmetric linear functional that converts an infinitesimal parallelepiped into a scalar value. A covector as discussed previously is a 1-form. 
